# resolveai

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
evaluation/: eval_harness.py
evaluation/datasets/: golden_conversations.jsonl
scripts/: load_kb.py
src/: config.py  logger.py
src/agent/: core.py  guardrails.py  memory.py
src/agent/prompts/: __init__.py  system_prompt_v1.md  system_prompt_v2.md
src/agent/tools/: __init__.py  calendar_tool.py  claims_tool.py  knowledge_base_tool.py  policy_crm_tool.py  slack_tool.py  zendesk_tool.py
src/analytics/: logger.py
src/api/: main.py
src/api/routes/: __init__.py  chat.py
src/db/: models.py
src/mocks/policy_crm_service/: Dockerfile  main.py
tests/integration/: test_chat_api.py
tests/unit/: test_guardrails.py  test_memory.py
