[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolveai"
version = "0.1.0"
description = "Enterprise AI insurance support agent — chat + voice, CRM integrations, evaluation"
requires-python = ">=3.11"

dependencies = [
    # ── Web framework ─────────────────────────────────────────────────────────
    # FastAPI: chosen over Flask because it is async-native, auto-generates
    # OpenAPI docs, and uses Pydantic natively. Every production AI API uses
    # async — LLM calls, DB calls, and tool calls are all I/O-bound operations.
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",       # ASGI server that runs FastAPI
    "python-multipart>=0.0.9",         # form parsing (needed for Twilio webhooks later)

    # ── Data validation ───────────────────────────────────────────────────────
    # Pydantic validates every request body, response, and config value.
    # If the wrong type arrives, you get a clear error — not a silent bug later.
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",        # reads .env into a typed Settings class

    # ── LLM client ────────────────────────────────────────────────────────────
    # We use the openai Python package as the HTTP client for Ollama.
    # Ollama runs locally, is completely free, and exposes an OpenAI-compatible
    # API — same package, zero cost, zero API key needed.
    # Swapping to Claude or GPT-4 later is a config change, not a code change.
    "openai>=1.30.0",

    # ── Vector store / RAG ────────────────────────────────────────────────────
    # ChromaDB: stores embedded insurance documents for semantic search.
    # sentence-transformers: converts text → embedding vectors ChromaDB stores.
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # ── HTTP client ───────────────────────────────────────────────────────────
    # httpx: async HTTP client for calling the mock CRM (and Zendesk in Week 2).
    # tenacity: retries failed HTTP calls with exponential backoff automatically.
    "httpx>=0.27.0",
    "tenacity>=8.3.0",

    # ── Database ──────────────────────────────────────────────────────────────
    # SQLAlchemy: maps Python classes to database tables (conversation logs).
    # psycopg2-binary: driver that lets SQLAlchemy talk to PostgreSQL.
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",

    # ── Logging ───────────────────────────────────────────────────────────────
    # structlog: outputs JSON logs in production (parseable by Grafana/Datadog)
    # and coloured human-readable text in development. Same code, two formats.
    "structlog>=24.2.0",

    # ── PII detection ─────────────────────────────────────────────────────────
    # Presidio: scans text for names, emails, phone numbers, policy IDs.
    # Anonymizes them before writing to logs — required for GDPR compliance.
    # This is not optional in an insurance product.
    "alembic>=1.13.1",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.1",            # loads .env file into os.environ at startup
    "jinja2>=3.1.4",                   # injects case context into prompt templates
    "tiktoken>=0.7.0",                 # counts tokens before sending to LLM
]

[project.optional-dependencies]
# ONLY installed when a developer runs: pip install -e ".[dev]"
# These never appear in the production Docker image — smaller image, less attack surface.
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",          # lets pytest run async test functions
    "pytest-cov>=5.0.0",               # measures how much of your code tests cover
    "pytest-mock>=3.14.0",             # provides MagicMock and AsyncMock helpers
    "ruff>=0.4.7",                     # linter + formatter (replaces flake8 + black)
    "mypy>=1.10.0",                    # static type checker
    "pre-commit>=3.7.1",               # runs checks automatically before each commit
]

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = basic errors, I = import order, UP = modern Python syntax, B = bug patterns
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]                      # line length enforced by formatter, not linter

[tool.ruff.lint.isort]
known-first-party = ["src"]            # treat src/ as your own code, not third-party

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"                  # every async test runs automatically — no decorator needed
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]                     # only package src/ — not tests/ or scripts/